Fix spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -119,6 +119,7 @@ iframe {
   display: flex;
   padding: 1rem;
   align-items: center;
+  text-align: center;
 
   img {
     width: 12em;
@@ -133,7 +134,8 @@ iframe {
 
     a {
       color: var(--alt);
-      margin-left: 1em;
+      padding: 0.5rem;
+      display: inline-block;
     }
 
     a:hover {
@@ -168,6 +170,10 @@ iframe {
 
 // Page-specific styles
 .home {
+  .about--img {
+    margin-bottom: 1rem;
+  }
+
   @media screen and (min-width: 50rem) {
     .about {
       display: flex;
@@ -176,6 +182,7 @@ iframe {
       .about--img {
         flex: 0 0 50%;
         margin-right: 1em;
+        margin-bottom: 0;
       }
 
       .about--txt {
